--- a/citycentre.css
+++ b/citycentre.css
@@ -16,35 +16,99 @@ body{
     width: 100vw;
 }
 
+button{
+    background-color: #474ce1;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: #000000;
+    border: none;
+}
+
+.menu{
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.language{
+    background-color: #06f646;
+    color: #000000;
+    padding: 10px 20px;
+    text-align: center;
+    height: 4 rem;
+    width: 100vw;
+}
+.driver-mode{
+    background-color: #06f646;
+    color: #000000;
+    padding: 10px 20px;
+    text-align: center;
+    height: 4 rem;
+    width: 100vw;
+}
+.community-chat{
+    background-color: #06f646;  
+    color: #000000;
+    padding: 10px 20px;
+    text-align: center;
+    height: 4 rem;
+    width: 100vw;
+}  
+.emergency-services{
+    background-color: #06f646;
+    color: #000000;
+    padding: 10px 20px;
+    text-align: center;
+    height: 4 rem;
+    width: 100vw;
+}
 .main-content{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 20px;
+    margin-top: 2rem;
 }
 
 .traffic{
     height: 20rem;
     width: 15rem;
     background-color: darksalmon;
+    background-image: url(./traffic.jpg);
+    background-size: cover;
+    background-position: center;
+    border: 4px solid rgb(0, 0, 0);
 }
 
 .weather{
     height: 20rem;
     width: 15rem;
     background-color: rgb(122, 229, 233);
+    background-image: url(./weather.png);
+    background-size: cover;
+    background-position: center;
+    border: 4px solid rgb(0, 0, 0);
 }
 
 .pollution{
     height: 20rem;
     width: 15rem;
     background-color: rgb(185, 189, 189);
+    background-image: url(./pollution.jpg);
+    background-size: cover;
+    background-position: center;
+    border: 4px solid rgb(0, 0, 0);
 }
 
 .alert-section{
     height: 20rem;
     width: 15rem;
     background-color: rgb(255, 0, 0);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    border: 4px solid rgb(0, 0, 0);
 }
 
 
