--- a/citycentre.css
+++ b/citycentre.css
@@ -18,18 +18,24 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     line-height: 1.6;
+    background-color: rgb(117, 114, 114);
+
 }
 
 .container {
+    margin: 0 auto;
+}
+main {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
 }
 
 .header {
-    background-color: var(--primary-color);
-    padding: 15px 0;
+    background-color: darkblue;
+    padding: 10px 0;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
 }
 
 .logo {
@@ -37,17 +43,17 @@ body {
     font-size: 1.5rem;
     font-weight: 600;
     color: white;
-    margin-bottom: 15px;
 }
 
 .top-menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 10px;
+    margin-bottom: 15px;
 }
 
 .menu-btn {
-    background-color: var(--accent-color);
+    background-color: greenyellow;
     border: none;
     border-radius: 8px;
     padding: 10px 15px;
@@ -56,10 +62,14 @@ body {
     gap: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    color: rgb(0, 0, 0);
+    font-size: medium;
+    font-weight: 500;
 }
 
 .menu-btn:hover {
-    background-color: #05d83c;
+    background-color: rgb(49, 48, 48);
+    color: white;
 }
 
 .dashboard {
@@ -174,7 +184,7 @@ body {
 }
 
 .footer {
-    background-color: var(--primary-color);
+    background-color: darkblue;
     color: white;
     text-align: center;
     padding: 15px 0;
